--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -1,198 +1,250 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: HTML5 Blank WordPress Theme\n"
-"POT-Creation-Date: 2013-09-18 00:25+0100\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Jürgen Rabe | www.egado.de <rabe@egado.de>\n"
-"Language-Team: Jürgen Rabe | www.egado.de <rabe@egado.de>\n"
-"Language: German\n"
+"POT-Creation-Date: 2016-11-25 13:14+0000\n"
+"PO-Revision-Date: 2016-11-25 13:20+0000\n"
+"Last-Translator: chillinhen <contact@chilliscope.de>\n"
+"Language-Team: German\n"
+"Language: de-DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Loco - https://localise.biz/\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: _e;__\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPath-1: ..\n"
+"Report-Msgid-Bugs-To: \n"
+"Plural-Forms: nplurals=2; plural=n != 1"
 
-#: ../404.php:9
-msgid "Page not found"
-msgstr "Fehler 404 – Die Seite wurde leider nicht gefunden."
+#: 404.php:5
+msgid ""
+"Error 404: The site you are looking for could unfortunately not be found."
+msgstr ""
+"Fehler 404: Die Seite, nach der Sie suchen, konnte leider nicht gefunden "
+"werden."
 
-#: ../404.php:11
-msgid "Return home?"
-msgstr "Zurück zur Startseite?"
+#: 404.php:9
+#, php-format
+msgid ""
+"Please check the URL, return to our home page or send us your questions by "
+"email to %s.</br>Thank You!"
+msgstr ""
+"Bitte überprüfen Sie die URL, kehren Sie zur Startseite zurück oder stellen "
+"Sie uns Ihre Fragen in einer E-Mail an %s </br/> Vielen Dank!"
 
-#: ../archive.php:6
+#: category.php:7
+msgid "Categories for "
+msgstr "Kategorien für"
+
+#: footer.php:10
+msgid "Sitemap"
+msgstr "Sitemap"
+
+#: functions.php:234
+msgid "Main Menu"
+msgstr "Hauptmenu"
+
+#: functions.php:235
+msgid "Service Menu"
+msgstr "Service Menu"
+
+#: functions.php:236
+msgid "Footer Links"
+msgstr "Footer Links"
+
+#: functions.php:237
+msgid "Responsive"
+msgstr "Responsives Menu"
+
+#. Name of the template
+msgid "Full Width Page"
+msgstr "Seite mit voller Seitenbreite"
+
+#. Name of the template
+msgid "Startseite"
+msgstr "Startseite"
+
+#. Name of the template
+msgid "Uebersicht"
+msgstr "Uebersicht"
+
+#. Name of the template
+msgid "Standorte"
+msgstr "Standorte"
+
+#. Name of the template
+msgid "Produktseite"
+msgstr "Produktseite"
+
+#. Name of the template
+msgid "Demo Page Template"
+msgstr ""
+
+#: partials/header-contact.php:8
+msgid "Follow us on facebook"
+msgstr "Folge uns auf facebook"
+
+#: partials/news.php:21
+msgid "News"
+msgstr "Aktuelles"
+
+#. Name of the theme
+msgid "SAK HTML5 Blank"
+msgstr "SAK HTML5 Blank"
+
+#. Description of the theme
+msgid "modified from HTML5 Blank WordPress Theme"
+msgstr "angepasst  an HTML5 Blank WordPress Theme"
+
+#. URI of the theme
+msgid "http://html5blank.com"
+msgstr "http://html5blank.com"
+
+#. Author of the theme
+msgid "Claudia Hillen thanks Todd Motto (@toddmotto)"
+msgstr "Claudia Hillen dankt Todd Motto (@toddmotto)"
+
+#. Author URI of the theme
+msgid "http://chilliscope.de"
+msgstr "http://chilliscope.de"
+
+#: archive.php:7
 msgid "Archives"
-msgstr "Archive"
+msgstr "Archiv"
 
-#: ../author.php:8
+#: author.php:9
 msgid "Author Archives for "
 msgstr "Autor-Archiv für "
 
-#: ../author.php:14
+#: author.php:15
 msgid "About "
 msgstr "Über "
 
-#: ../author.php:41 ../loop.php:22 ../single.php:27
+#: author.php:42 loop.php:22 single.php:28
 msgid "Published by"
 msgstr "Veröffentlicht von"
 
-#: ../author.php:42 ../loop.php:23 ../single.php:28
+#: author.php:43 loop.php:23 single.php:29
 msgid "Leave your thoughts"
 msgstr "Schreibe einen Kommentar"
 
-#: ../author.php:42 ../loop.php:23 ../single.php:28
+#: author.php:43 loop.php:23 single.php:29
 msgid "1 Comment"
 msgstr "1 Kommentar"
 
-#: ../author.php:42 ../loop.php:23 ../single.php:28
+#: author.php:43 loop.php:23 single.php:29
 msgid "% Comments"
 msgstr "% Kommentare"
 
-#: ../author.php:61 ../loop.php:39 ../page.php:31 ../single.php:53
-#: ../template-demo.php:31
+#: author.php:62 loop.php:39 single.php:54 template-demo.php:32
 msgid "Sorry, nothing to display."
 msgstr "Nichts gefunden, was den Suchkriterien entspricht."
 
-#: ../category.php:6
-msgid "Categories for"
-msgstr "Kategorie-Archiv für"
-
-#: ../comments.php:3
+#: comments.php:3
 msgid "Post is password protected. Enter the password to view any comments."
 msgstr ""
 "Dieser Artikel ist passwortgeschützt. Um die Kommentare sehen zu können muss "
 "das Passwort eingegeben werden."
 
-#: ../comments.php:18
+#: comments.php:18
 msgid "Comments are closed here."
 msgstr "Kommentare sind geschlossen."
 
-#: ../footer.php:6
-msgid "Powered by"
-msgstr "Betrieben mit"
-
-#: ../functions.php:133
-msgid "Header Menu"
-msgstr "Kopfbereichs-Menü"
-
-#: ../functions.php:134
-msgid "Sidebar Menu"
-msgstr "Seitenleisten-Menü"
-
-#: ../functions.php:135
-msgid "Extra Menu"
-msgstr "Zusatz-Menü"
-
-#: ../functions.php:181
+#: functions.php:278
 msgid "Widget Area 1"
 msgstr "Widget-Bereich 1"
 
-#: ../functions.php:182 ../functions.php:193
+#: functions.php:279 functions.php:290
 msgid "Description for this widget-area..."
 msgstr "Beschreibung für diesen Widget-Bereich…"
 
-#: ../functions.php:192
+#: functions.php:289
 msgid "Widget Area 2"
 msgstr "Widget-Bereich 2"
 
-#: ../functions.php:258
+#: functions.php:356
 msgid "View Article"
 msgstr "Artikel ansehen"
 
-#: ../functions.php:319
-#, php-format
-msgid "<cite class=\"fn\">%s</cite> <span class=\"says\">says:</span>"
-msgstr "<cite class=\"fn\">%s</cite> <span class=\"says\">sagt:</span>"
-
-#: ../functions.php:322
-msgid "Your comment is awaiting moderation."
-msgstr "Dein Kommentar muss noch moderiert werden – Bitte hab etwas Geduld."
-
-#: ../functions.php:328
-#, php-format
-msgid "%1$s at %2$s"
-msgstr "%1$s um %2$s"
-
-#: ../functions.php:328
-msgid "(Edit)"
-msgstr "(Bearbeiten)"
-
-#: ../functions.php:411 ../functions.php:412
+#: functions.php:538 functions.php:539
 msgid "HTML5 Blank Custom Post"
 msgstr "HTML5 Blank Custom Post-Type"
 
-#: ../functions.php:413
+#: functions.php:540
 msgid "Add New"
 msgstr "Neuen Artikel erstellen"
 
-#: ../functions.php:414
+#: functions.php:541
 msgid "Add New HTML5 Blank Custom Post"
 msgstr "Neuen HTML5 Blank Custom Post erstellen"
 
-#: ../functions.php:415
+#: functions.php:542
 msgid "Edit"
 msgstr "Bearbeiten"
 
-#: ../functions.php:416
+#: functions.php:543
 msgid "Edit HTML5 Blank Custom Post"
 msgstr "HTML5 Blank Custom Post bearbeiten"
 
-#: ../functions.php:417
+#: functions.php:544
 msgid "New HTML5 Blank Custom Post"
 msgstr "Neuer HTML5 Blank Custom Post"
 
-#: ../functions.php:418 ../functions.php:419
+#: functions.php:545 functions.php:546
 msgid "View HTML5 Blank Custom Post"
 msgstr "HTML5 Blank Custom Post ansehen"
 
-#: ../functions.php:420
+#: functions.php:547
 msgid "Search HTML5 Blank Custom Post"
 msgstr "HTML5 Blank Custom Post suchen"
 
-#: ../functions.php:421
+#: functions.php:548
 msgid "No HTML5 Blank Custom Posts found"
 msgstr "Keine HTML5 Blank Custom Posts gefunden"
 
-#: ../functions.php:422
+#: functions.php:549
 msgid "No HTML5 Blank Custom Posts found in Trash"
 msgstr "Keine HTML5 Blank Custom Posts im Papierkorb gefunden"
 
-#: ../index.php:6
+#: index.php:7
 msgid "Latest Posts"
 msgstr "Letzte Artikel"
 
-#: ../search.php:6
+#: search.php:7
 #, php-format
 msgid "%s Search Results for "
 msgstr "%s Suchergebnisse für "
 
-#: ../searchform.php:3
+#: searchform.php:3
 msgid "To search, type and hit enter."
 msgstr "Suchbegriff…"
 
-#: ../searchform.php:4
+#: searchform.php:4
 msgid "Search"
 msgstr "Suchen"
 
-#: ../single.php:33
+#: single.php:34
 msgid "Tags: "
 msgstr "Stichwörter: "
 
-#: ../single.php:35
+#: single.php:36
 msgid "Categorised in: "
 msgstr "Kategorisiert in: "
 
-#: ../single.php:37
+#: single.php:38
 msgid "This post was written by "
 msgstr "Dieser Artikel wurde verfasst von "
 
-#: ../tag.php:6
+#: tag.php:7
 msgid "Tag Archive: "
 msgstr "Stichword-Archiv: "
 
-#~ msgid "%s results for "
-#~ msgstr "%s Ergebnisse für "
+#: partials/article-404.php:3
+msgid "Page not found"
+msgstr "Fehler 404 – Die Seite wurde leider nicht gefunden."
+
+#: partials/article-404.php:5
+msgid "Return home?"
+msgstr "Zurück zur Startseite?"
